# cfap

./: .gitignore  README.md  lint_format.py  plan.md  pyproject.toml  requirements.txt  run.py  supabase_schema.sql  task.md  vercel.json
api/: index.py
backend/: app.py  config.py  constants.py  enums.py  exceptions.py  main.py  models.py  schemas.py  utils.py
backend/api/routers/: analytics.py  auth.py  calculator.py  challenges.py  recommendations.py
backend/core/: config.py  db.py  db_init.py  logging_config.py  security.py
backend/middleware/: errors.py
backend/models/: models.py
backend/repositories/: carbon_repository.py  user_repository.py
backend/routes/: analytics.py  auth.py  calculator.py  challenges.py  recommendations.py
backend/schemas/: schemas.py
backend/services/: __init__.py  calculation_service.py  calculator.py  gemini_service.py  recommender.py  seeding.py  user_builder.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_calculator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/css/: style.css
frontend/js/: app.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Calculator.tsx  Challenges.tsx  Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts  supabaseClient.ts
frontend/src/tests/: Calculator.test.tsx  Navbar.test.tsx  setup.ts
migrations/versions/: 94a07b17999b_add_proof_text_to_challenge_progress.py  eaca73422883_add_composite_index_to_carbon_entries.py
tests/: test_app.py
(+3 files in other folders)
